Use icon link to indicate running status and use job URL instead of workflow run URL

--- a/tests/snapshots/test-results-body.html
+++ b/tests/snapshots/test-results-body.html
@@ -12,7 +12,7 @@
 		<li>
 			Built by:
 			<a
-				href="https://github.com/andrewiggins/tachometer-reporter-action/actions/runs/166208365"
+				href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
 				>Pull Request Test #50</a
 			>
 		</li>
