--- a/tests/snapshots/test-results-summary.html
+++ b/tests/snapshots/test-results-summary.html
@@ -1,4 +1,5 @@
 <div id="tachometer-reporter-action--summary-l5UdXHMZ2m10Bdp0kqRnW0cWarA">
-	[test_bench](#tachometer-reporter-action--results-l5UdXHMZ2m10Bdp0kqRnW0cWarA):
-	<strong>unsure 🔍</strong> *-10% - +12% (-4.10ms - +5.24ms)*
+	<span class="status"></span>test_bench<span
+		>: <strong>unsure 🔍</strong> <em>-10% - +12% (-4.10ms - +5.24ms)</em></span
+	>
 </div>
