--- a/tests/snapshots/test-results-new-comment.html
+++ b/tests/snapshots/test-results-new-comment.html
@@ -7,8 +7,10 @@
 <ul id="tachometer-reporter-action--summaries">
 	<li>
 		<div id="tachometer-reporter-action--summary-l5UdXHMZ2m10Bdp0kqRnW0cWarA">
-			[test_bench](#tachometer-reporter-action--results-l5UdXHMZ2m10Bdp0kqRnW0cWarA):
-			<strong>unsure 🔍</strong> *-10% - +12% (-4.10ms - +5.24ms)*
+			<span class="status"></span>test_bench<span
+				>: <strong>unsure 🔍</strong>
+				<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
+			>
 		</div>
 	</li>
 </ul>
@@ -32,7 +34,7 @@
 				<li>
 					Built by:
 					<a
-						href="https://github.com/andrewiggins/tachometer-reporter-action/actions/runs/166208365"
+						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
 						>Pull Request Test #50</a
 					>
 				</li>
