Update existing comment with status

--- a/tests/snapshots/new-comment-running.html
+++ b/tests/snapshots/new-comment-running.html
@@ -1,42 +1,40 @@
-<h2>📊 Tachometer Benchmark Results</h2>
-
-<h3>Summary</h3>
-
-<sub>local-framework vs base-framework</sub>
-
-<ul id="tachometer-reporter-action--summaries">
-	<li>
-		<div id="tachometer-reporter-action--summary-test-results">
-			<span class="status"
-				><a
-					href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
-					title="Currently running in Pull Request Test #50…"
-					aria-label="Currently running in Pull Request Test #50…"
-					>⏱
-				</a></span
-			>test-results
-		</div>
-	</li>
-</ul>
-
-<h3>Results</h3>
-
-<div id="tachometer-reporter-action--results-test-results">
-	<details
-		><summary
-			><a
-				href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
-				title="Currently running in Pull Request Test #50…"
-				aria-label="Currently running in Pull Request Test #50…"
-				>⏱
-			</a>
-			<strong>test-results</strong></summary
-		>
-		<div>
-			<a
-				href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
-				>Currently running in Pull Request Test #50…</a
+<div>
+	<h2>📊 Tachometer Benchmark Results</h2>
+	<h3>Summary</h3>
+	<sub>local-framework vs base-framework</sub>
+	<ul id="tachometer-reporter-action--summaries">
+		<li>
+			<div id="tachometer-reporter-action--summary-test-results">
+				<span class="status"
+					><a
+						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+						title="Currently running in Pull Request Test #50…"
+						aria-label="Currently running in Pull Request Test #50…"
+						>⏱
+					</a></span
+				>test-results
+			</div>
+		</li>
+	</ul>
+	<h3>Results</h3>
+	<div id="tachometer-reporter-action--results-test-results">
+		<details
+			><summary
+				><span class="status"
+					><a
+						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+						title="Currently running in Pull Request Test #50…"
+						aria-label="Currently running in Pull Request Test #50…"
+						>⏱
+					</a></span
+				><strong>test-results</strong></summary
 			>
-		</div></details
-	>
+			<div>
+				<a
+					href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+					>Currently running in Pull Request Test #50…</a
+				>
+			</div></details
+		>
+	</div>
 </div>
