--- a/tests/snapshots/test-results-new-comment.html
+++ b/tests/snapshots/test-results-new-comment.html
@@ -1,7 +1,7 @@
 <div>
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
-	<sub>local-framework vs base-framework</sub>
+	<p><sub>local-framework vs base-framework</sub></p>
 	<ul id="tachometer-reporter-action--summaries">
 		<li>
 			<div id="tachometer-reporter-action--summary-l5UdXHMZ2m10Bdp0kqRnW0cWarA">
