Remove SummaryList and add results wrapper

--- a/tests/fixtures/new-comment-running.html
+++ b/tests/fixtures/new-comment-running.html
@@ -17,24 +17,26 @@
 		</li>
 	</ul>
 	<h3>Results</h3>
-	<div id="tachometer-reporter-action--results-test-results">
-		<details
-			><summary
-				><span class="status"
-					><a
-						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
-						title="Currently running in Pull Request Test #50…"
-						aria-label="Currently running in Pull Request Test #50…"
-						>⏱
-					</a></span
-				><strong>test-results</strong></summary
-			>
-			<div>
-				<a
-					href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
-					>Currently running in Pull Request Test #50…</a
+	<div id="tachometer-reporter-action--results">
+		<div id="tachometer-reporter-action--results-test-results">
+			<details
+				><summary
+					><span class="status"
+						><a
+							href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+							title="Currently running in Pull Request Test #50…"
+							aria-label="Currently running in Pull Request Test #50…"
+							>⏱
+						</a></span
+					><strong>test-results</strong></summary
 				>
-			</div></details
-		>
+				<div>
+					<a
+						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+						>Currently running in Pull Request Test #50…</a
+					>
+				</div></details
+			>
+		</div>
 	</div>
 </div>
