--- a/tests/fixtures/test-results-existing-comment.html
+++ b/tests/fixtures/test-results-existing-comment.html
@@ -13,79 +13,81 @@
 		</li>
 	</ul>
 	<h3>Results</h3>
-	<div id="tachometer-reporter-action--results-report-id">
-		<details
-			><summary
-				><span class="status"></span><strong>test_bench</strong></summary
+	<div id="tachometer-reporter-action--results">
+		<div id="tachometer-reporter-action--results-report-id">
+			<details
+				><summary
+					><span class="status"></span><strong>test_bench</strong></summary
+				>
+				<div>
+					<ul>
+						<li>Browser: chrome-headless 83.0.4103.116</li>
+						<li>Sample size: 60</li>
+						<li>
+							Commit:
+							<a
+								href="https://github.com/andrewiggins/tachometer-reporter-action/commit/626e78c2446b8d1afc917fc9b0059aa65cc9a07d"
+								><tt>626e78c</tt></a
+							>
+						</li>
+						<li>
+							Built by:
+							<a
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+								>Pull Request Test #50</a
+							>
+						</li>
+					</ul>
+					<table>
+						<thead>
+							<tr>
+								<th>Version</th>
+								<th>Avg time</th>
+								<th>vs fast-framework</th>
+								<th>vs base-framework</th>
+								<th>vs local-framework</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td align="center">fast-framework</td>
+								<td align="center">32.09ms - 38.19ms</td>
+								<td align="center">-</td>
+								<td align="center">
+									<strong>faster ✔</strong><br />8% - 27%<br />3.22ms - 11.96ms
+								</td>
+								<td align="center">
+									<strong>faster ✔</strong><br />9% - 28%<br />3.55ms - 12.77ms
+								</td>
+							</tr>
+							<tr>
+								<td align="center">base-framework</td>
+								<td align="center">39.60ms - 45.87ms</td>
+								<td align="center">
+									<strong>slower ❌</strong><br />8% - 35%<br />3.22ms - 11.96ms
+								</td>
+								<td align="center">-</td>
+								<td align="center">
+									<strong>unsure 🔍</strong><br />-12% - +9%<br />-5.24ms -
+									+4.10ms
+								</td>
+							</tr>
+							<tr>
+								<td align="center">local-framework</td>
+								<td align="center">39.84ms - 46.76ms</td>
+								<td align="center">
+									<strong>slower ❌</strong><br />9% - 38%<br />3.55ms - 12.77ms
+								</td>
+								<td align="center">
+									<strong>unsure 🔍</strong><br />-10% - +12%<br />-4.10ms -
+									+5.24ms
+								</td>
+								<td align="center">-</td>
+							</tr>
+						</tbody>
+					</table>
+				</div></details
 			>
-			<div>
-				<ul>
-					<li>Browser: chrome-headless 83.0.4103.116</li>
-					<li>Sample size: 60</li>
-					<li>
-						Commit:
-						<a
-							href="https://github.com/andrewiggins/tachometer-reporter-action/commit/626e78c2446b8d1afc917fc9b0059aa65cc9a07d"
-							><tt>626e78c</tt></a
-						>
-					</li>
-					<li>
-						Built by:
-						<a
-							href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
-							>Pull Request Test #50</a
-						>
-					</li>
-				</ul>
-				<table>
-					<thead>
-						<tr>
-							<th>Version</th>
-							<th>Avg time</th>
-							<th>vs fast-framework</th>
-							<th>vs base-framework</th>
-							<th>vs local-framework</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td align="center">fast-framework</td>
-							<td align="center">32.09ms - 38.19ms</td>
-							<td align="center">-</td>
-							<td align="center">
-								<strong>faster ✔</strong><br />8% - 27%<br />3.22ms - 11.96ms
-							</td>
-							<td align="center">
-								<strong>faster ✔</strong><br />9% - 28%<br />3.55ms - 12.77ms
-							</td>
-						</tr>
-						<tr>
-							<td align="center">base-framework</td>
-							<td align="center">39.60ms - 45.87ms</td>
-							<td align="center">
-								<strong>slower ❌</strong><br />8% - 35%<br />3.22ms - 11.96ms
-							</td>
-							<td align="center">-</td>
-							<td align="center">
-								<strong>unsure 🔍</strong><br />-12% - +9%<br />-5.24ms -
-								+4.10ms
-							</td>
-						</tr>
-						<tr>
-							<td align="center">local-framework</td>
-							<td align="center">39.84ms - 46.76ms</td>
-							<td align="center">
-								<strong>slower ❌</strong><br />9% - 38%<br />3.55ms - 12.77ms
-							</td>
-							<td align="center">
-								<strong>unsure 🔍</strong><br />-10% - +12%<br />-4.10ms -
-								+5.24ms
-							</td>
-							<td align="center">-</td>
-						</tr>
-					</tbody>
-				</table>
-			</div></details
-		>
+		</div>
 	</div>
 </div>
