--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -1,7 +1,6 @@
 <div>
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
-	<p><sub>local-framework vs base-framework</sub></p>
 	<ul id="tachometer-reporter-action--summaries">
 		<li>
 			<div id="tachometer-reporter-action--summary-report-id">
@@ -15,7 +14,7 @@
 				>test_bench<span
 					>: <strong>unsure 🔍</strong>
 					<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
-				>
+				><br /><sup>local-framework vs base-framework</sup>
 			</div>
 		</li>
 	</ul>
