Implement comment updating

--- a/tests/fixtures/new-comment-running.html
+++ b/tests/fixtures/new-comment-running.html
@@ -29,7 +29,7 @@
 						</a></span
 					><strong>test-results</strong></summary
 				>
-				<div>
+				<div class="result-entry">
 					<a
 						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
 						>Currently running in Pull Request Test #50…</a
