--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -32,7 +32,7 @@
 						</a></span
 					><strong>test_bench</strong></summary
 				>
-				<div>
+				<div class="result-entry">
 					<ul>
 						<li>Browser: chrome-headless 83.0.4103.116</li>
 						<li>Sample size: 60</li>
