--- a/tests/fixtures/test-results-new-comment.html
+++ b/tests/fixtures/test-results-new-comment.html
@@ -18,7 +18,7 @@
 				><summary
 					><span class="status"></span><strong>test_bench</strong></summary
 				>
-				<div>
+				<div class="result-entry">
 					<ul>
 						<li>Browser: chrome-headless 83.0.4103.116</li>
 						<li>Sample size: 60</li>
