--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -2,8 +2,11 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<ul id="tachometer-reporter-action--summaries">
-		<li>
-			<div id="tachometer-reporter-action--summary-report-id">
+		<li data-job-index="2">
+			<div
+				id="tachometer-reporter-action--summary-report-id"
+				data-run-number="4"
+			>
 				<span class="status"
 					><a
 						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
@@ -20,7 +23,11 @@
 	</ul>
 	<h3>Results</h3>
 	<div id="tachometer-reporter-action--results">
-		<div id="tachometer-reporter-action--results-report-id">
+		<div
+			id="tachometer-reporter-action--results-report-id"
+			data-run-number="4"
+			data-job-index="2"
+		>
 			<details
 				><summary
 					><span class="status"
