--- a/tests/fixtures/test-results-new-comment.html
+++ b/tests/fixtures/test-results-new-comment.html
@@ -2,8 +2,11 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<ul id="tachometer-reporter-action--summaries">
-		<li>
-			<div id="tachometer-reporter-action--summary-l5UdXHMZ2m10Bdp0kqRnW0cWarA">
+		<li data-job-index="2">
+			<div
+				id="tachometer-reporter-action--summary-l5UdXHMZ2m10Bdp0kqRnW0cWarA"
+				data-run-number="4"
+			>
 				<span class="status"></span>test_bench<span
 					>: <strong>unsure 🔍</strong>
 					<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
@@ -13,7 +16,11 @@
 	</ul>
 	<h3>Results</h3>
 	<div id="tachometer-reporter-action--results">
-		<div id="tachometer-reporter-action--results-l5UdXHMZ2m10Bdp0kqRnW0cWarA">
+		<div
+			id="tachometer-reporter-action--results-l5UdXHMZ2m10Bdp0kqRnW0cWarA"
+			data-run-number="4"
+			data-job-index="2"
+		>
 			<details
 				><summary
 					><span class="status"></span><strong>test_bench</strong></summary
