Update tests with ActionInfo type

--- a/tests/fixtures/multiple-entries.html
+++ b/tests/fixtures/multiple-entries.html
@@ -5,7 +5,7 @@
 		<li data-job-index="2">
 			<div
 				id="tachometer-reporter-action--summary-report-id"
-				data-run-number="4"
+				data-run-number="50"
 			>
 				<span class="status"></span>test_bench<span
 					>: <strong>unsure 🔍</strong>
@@ -14,7 +14,7 @@
 			</div>
 		</li>
 		<li data-job-index="4">
-			<div id="tachometer-reporter-action--summary-new-id" data-run-number="4">
+			<div id="tachometer-reporter-action--summary-new-id" data-run-number="50">
 				<span class="status"></span>new-id<span
 					>: <strong>unsure 🔍</strong>
 					<em>-21% - +2% (-10.34ms - +1.15ms)</em></span
@@ -26,7 +26,7 @@
 	<div id="tachometer-reporter-action--results">
 		<div
 			id="tachometer-reporter-action--results-report-id"
-			data-run-number="4"
+			data-run-number="50"
 			data-job-index="2"
 		>
 			<details
@@ -47,7 +47,7 @@
 						<li>
 							Built by:
 							<a
-								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 								>Pull Request Test #50</a
 							>
 						</li>
@@ -105,7 +105,7 @@
 		</div>
 		<div
 			id="tachometer-reporter-action--results-new-id"
-			data-run-number="4"
+			data-run-number="50"
 			data-job-index="4"
 		>
 			<details
@@ -124,7 +124,7 @@
 						<li>
 							Built by:
 							<a
-								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 								>Pull Request Test #50</a
 							>
 						</li>
