--- a/tests/fixtures/new-comment-running.html
+++ b/tests/fixtures/new-comment-running.html
@@ -5,11 +5,11 @@
 		<li data-job-index="2">
 			<div
 				id="tachometer-reporter-action--summary-test-results"
-				data-run-number="4"
+				data-run-number="50"
 			>
 				<span class="status"
 					><a
-						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 						title="Currently running in Pull Request Test #50…"
 						aria-label="Currently running in Pull Request Test #50…"
 						>⏱
@@ -22,14 +22,14 @@
 	<div id="tachometer-reporter-action--results">
 		<div
 			id="tachometer-reporter-action--results-test-results"
-			data-run-number="4"
+			data-run-number="50"
 			data-job-index="2"
 		>
 			<details
 				><summary
 					><span class="status"
 						><a
-							href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+							href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 							title="Currently running in Pull Request Test #50…"
 							aria-label="Currently running in Pull Request Test #50…"
 							>⏱
@@ -38,7 +38,7 @@
 				>
 				<div class="result-entry">
 					<a
-						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 						>Currently running in Pull Request Test #50…</a
 					>
 				</div></details
