--- a/tests/fixtures/test-results-existing-comment.html
+++ b/tests/fixtures/test-results-existing-comment.html
@@ -5,7 +5,7 @@
 		<li data-job-index="2">
 			<div
 				id="tachometer-reporter-action--summary-report-id"
-				data-run-number="4"
+				data-run-number="50"
 			>
 				<span class="status"></span>test_bench<span
 					>: <strong>unsure 🔍</strong>
@@ -18,7 +18,7 @@
 	<div id="tachometer-reporter-action--results">
 		<div
 			id="tachometer-reporter-action--results-report-id"
-			data-run-number="4"
+			data-run-number="50"
 			data-job-index="2"
 		>
 			<details
@@ -39,7 +39,7 @@
 						<li>
 							Built by:
 							<a
-								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 								>Pull Request Test #50</a
 							>
 						</li>
