--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -5,11 +5,11 @@
 		<li data-job-index="2">
 			<div
 				id="tachometer-reporter-action--summary-report-id"
-				data-run-number="4"
+				data-run-number="50"
 			>
 				<span class="status"
 					><a
-						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 						title="Currently running in Pull Request Test #50…"
 						aria-label="Currently running in Pull Request Test #50…"
 						>⏱
@@ -32,7 +32,7 @@
 				><summary
 					><span class="status"
 						><a
-							href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+							href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 							title="Currently running in Pull Request Test #50…"
 							aria-label="Currently running in Pull Request Test #50…"
 							>⏱
@@ -53,7 +53,7 @@
 						<li>
 							Built by:
 							<a
-								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 								>Pull Request Test #50</a
 							>
 						</li>
