--- a/tests/fixtures/test-results-body.html
+++ b/tests/fixtures/test-results-body.html
@@ -12,7 +12,7 @@
 		<li>
 			Built by:
 			<a
-				href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862224869?check_suite_focus=true"
+				href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 				>Pull Request Test #50</a
 			>
 		</li>
