--- a/tests/fixtures/new-comment-running.html
+++ b/tests/fixtures/new-comment-running.html
@@ -2,7 +2,7 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<ul id="tachometer-reporter-action--summaries">
-		<li data-job-index="2">
+		<li data-sort-key="test-results">
 			<div
 				id="tachometer-reporter-action--summary-test-results"
 				data-run-number="50"
@@ -23,7 +23,7 @@
 		<div
 			id="tachometer-reporter-action--results-test-results"
 			data-run-number="50"
-			data-job-index="2"
+			data-sort-key="test-results"
 		>
 			<details
 				><summary
