--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -2,7 +2,7 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<ul id="tachometer-reporter-action--summaries">
-		<li data-job-index="2">
+		<li data-sort-key="test-results">
 			<div
 				id="tachometer-reporter-action--summary-report-id"
 				data-run-number="50"
@@ -25,8 +25,8 @@
 	<div id="tachometer-reporter-action--results">
 		<div
 			id="tachometer-reporter-action--results-report-id"
-			data-run-number="4"
-			data-job-index="2"
+			data-run-number="50"
+			data-sort-key="test-results"
 		>
 			<details
 				><summary
