Change sorting to use report title

--- a/tests/fixtures/test-results-new-comment.html
+++ b/tests/fixtures/test-results-new-comment.html
@@ -2,7 +2,7 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<ul id="tachometer-reporter-action--summaries">
-		<li data-sort-key="l5UdXHMZ2m10Bdp0kqRnW0cWarA">
+		<li data-sort-key="test_bench">
 			<div
 				id="tachometer-reporter-action--summary-l5UdXHMZ2m10Bdp0kqRnW0cWarA"
 				data-run-number="50"
@@ -19,7 +19,7 @@
 		<div
 			id="tachometer-reporter-action--results-l5UdXHMZ2m10Bdp0kqRnW0cWarA"
 			data-run-number="50"
-			data-sort-key="l5UdXHMZ2m10Bdp0kqRnW0cWarA"
+			data-sort-key="test_bench"
 		>
 			<details
 				><summary
