--- a/tests/fixtures/new-comment-running.html
+++ b/tests/fixtures/new-comment-running.html
@@ -1,6 +1,7 @@
 <div>
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
+	<p class="global-status"></p>
 	<ul id="tachometer-reporter-action--summaries">
 		<li data-sort-key="test-results">
 			<div
@@ -19,6 +20,7 @@
 		</li>
 	</ul>
 	<h3>Results</h3>
+	<p class="global-status"></p>
 	<div id="tachometer-reporter-action--results">
 		<div
 			id="tachometer-reporter-action--results-test-results"
