--- a/tests/fixtures/multiple-entries.html
+++ b/tests/fixtures/multiple-entries.html
@@ -43,11 +43,7 @@
 						<li>Browser: chrome-headless 83.0.4103.116</li>
 						<li>Sample size: 60</li>
 						<li>
-							Commit:
-							<a
-								href="https://github.com/andrewiggins/tachometer-reporter-action/commit/626e78c2446b8d1afc917fc9b0059aa65cc9a07d"
-								><tt>626e78c</tt></a
-							>
+							Commit: 626e78c
 						</li>
 						<li>
 							Built by:
@@ -123,11 +119,7 @@
 						<li>Browser: chrome-headless 83.0.4103.116</li>
 						<li>Sample size: 60</li>
 						<li>
-							Commit:
-							<a
-								href="https://github.com/andrewiggins/tachometer-reporter-action/commit/626e78c2446b8d1afc917fc9b0059aa65cc9a07d"
-								><tt>626e78c</tt></a
-							>
+							Commit: 626e78c
 						</li>
 						<li>
 							Built by:
