WIP: Add initial implementation of updating summaries with multi-measures

--- a/tests/fixtures/multi-measure-new-comment.html
+++ b/tests/fixtures/multi-measure-new-comment.html
@@ -2,19 +2,46 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<p class="global-status"></p>
-	<ul id="tachometer-reporter-action--summaries">
-		<li data-sort-key="test_bench">
-			<div
-				id="tachometer-reporter-action--summary-iY6BxdgC3PLg3Tl7RF-jNoBSUN0"
-				data-run-number="50"
+	<div id="tachometer-reporter-action--summaries">
+		<div data-sort-key="metric1">
+			<h4>metric1</h4>
+			<ul
+				id="tachometer-reporter-action--summaries::NoiP7WgRdRcrJ70VIyPGsbpnK5s"
 			>
-				<span class="status"></span>test_bench<span
-					>: <strong>unsure 🔍</strong>
-					<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
-				><br /><sup>local-framework vs base-framework</sup>
-			</div>
-		</li>
-	</ul>
+				<li data-sort-key="test_bench">
+					<div
+						id="tachometer-reporter-action--summary::NoiP7WgRdRcrJ70VIyPGsbpnK5s::iY6BxdgC3PLg3Tl7RF-jNoBSUN0"
+						class="summary::iY6BxdgC3PLg3Tl7RF-jNoBSUN0"
+						data-run-number="50"
+					>
+						<span class="status"></span>test_bench<span
+							>: <strong>unsure 🔍</strong>
+							<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
+						><br /><sup>local-framework vs base-framework</sup>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div data-sort-key="metric2">
+			<h4>metric2</h4>
+			<ul
+				id="tachometer-reporter-action--summaries::KH9BvyhI7LuvKHw_rmA7TWNSg4M"
+			>
+				<li data-sort-key="test_bench">
+					<div
+						id="tachometer-reporter-action--summary::KH9BvyhI7LuvKHw_rmA7TWNSg4M::iY6BxdgC3PLg3Tl7RF-jNoBSUN0"
+						class="summary::iY6BxdgC3PLg3Tl7RF-jNoBSUN0"
+						data-run-number="50"
+					>
+						<span class="status"></span>test_bench<span
+							>: <strong>faster ✔</strong>
+							<em>9% - 28% (3.55ms - 12.77ms)</em></span
+						><br /><sup>local-framework vs base-framework</sup>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<h3>Results</h3>
 	<p class="global-status"></p>
 	<div id="tachometer-reporter-action--results">
