--- a/tests/fixtures/new-comment-initialized.html
+++ b/tests/fixtures/new-comment-initialized.html
@@ -4,7 +4,7 @@
 	<p class="global-status">
 		A summary of the benchmark results will show here once they finish.
 	</p>
-	<ul id="tachometer-reporter-action--summaries"></ul>
+	<div id="tachometer-reporter-action--summaries"></div>
 	<h3>Results</h3>
 	<p class="global-status">
 		The full results of your benchmarks will show here once they finish.
