--- a/tests/fixtures/test-results-summary.html
+++ b/tests/fixtures/test-results-summary.html
@@ -1,5 +1,6 @@
 <div
-	id="tachometer-reporter-action--summary-fXZiwODNGd0dkOsS2QmPDRQGacM"
+	id="tachometer-reporter-action--summary::VRSrXilRuQNwRBqUO-7MnkROuVU::fXZiwODNGd0dkOsS2QmPDRQGacM"
+	class="summary-fXZiwODNGd0dkOsS2QmPDRQGacM"
 	data-run-number="50"
 >
 	<span class="status"></span>test_bench<span
