Update existing tests to new measurement summary format

--- a/tests/fixtures/new-comment-running.html
+++ b/tests/fixtures/new-comment-running.html
@@ -2,23 +2,30 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<p class="global-status"></p>
-	<ul id="tachometer-reporter-action--summaries">
-		<li data-sort-key="test-results">
-			<div
-				id="tachometer-reporter-action--summary-test-results"
-				data-run-number="50"
+	<div id="tachometer-reporter-action--summaries">
+		<div data-sort-key="000-default">
+			<ul
+				id="tachometer-reporter-action--summaries::vLpvdPi0hOozeUB9NMaWIJ9oUSA"
 			>
-				<span class="status"
-					><a
-						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
-						title="Currently running in Pull Request Test #50…"
-						aria-label="Currently running in Pull Request Test #50…"
-						>⏱
-					</a></span
-				>test-results
-			</div>
-		</li>
-	</ul>
+				<li data-sort-key="test-results">
+					<div
+						id="tachometer-reporter-action--summary::vLpvdPi0hOozeUB9NMaWIJ9oUSA::test-results"
+						class="summary::test-results"
+						data-run-number="50"
+					>
+						<span class="status"
+							><a
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
+								title="Currently running in Pull Request Test #50…"
+								aria-label="Currently running in Pull Request Test #50…"
+								>⏱
+							</a></span
+						>test-results
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<h3>Results</h3>
 	<p class="global-status"></p>
 	<div id="tachometer-reporter-action--results">
