--- a/tests/fixtures/test-results-2-updated-comment.html
+++ b/tests/fixtures/test-results-2-updated-comment.html
@@ -2,24 +2,31 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<p class="global-status"></p>
-	<ul id="tachometer-reporter-action--summaries">
-		<li data-sort-key="test_bench">
-			<div
-				id="tachometer-reporter-action--summary-fXZiwODNGd0dkOsS2QmPDRQGacM"
-				data-run-number="50"
+	<div id="tachometer-reporter-action--summaries">
+		<div data-sort-key="000-default">
+			<ul
+				id="tachometer-reporter-action--summaries::vLpvdPi0hOozeUB9NMaWIJ9oUSA"
 			>
-				<span class="status"></span>test_bench<span
-					>: <strong>unsure 🔍</strong>
-					<em>-11% - +13% (-5.10ms - +6.24ms)</em></span
-				><br /><sup>local-framework vs base-framework</sup>
-			</div>
-		</li>
-	</ul>
+				<li data-sort-key="test_bench">
+					<div
+						id="tachometer-reporter-action--summary::vLpvdPi0hOozeUB9NMaWIJ9oUSA::JQx4P-VUyiFWEMlMIUU5w9uyy6s"
+						class="summary::JQx4P-VUyiFWEMlMIUU5w9uyy6s"
+						data-run-number="50"
+					>
+						<span class="status"></span>test_bench<span
+							>: <strong>unsure 🔍</strong>
+							<em>-11% - +13% (-5.10ms - +6.24ms)</em></span
+						><br /><sup>local-framework vs base-framework</sup>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<h3>Results</h3>
 	<p class="global-status"></p>
 	<div id="tachometer-reporter-action--results">
 		<div
-			id="tachometer-reporter-action--results-fXZiwODNGd0dkOsS2QmPDRQGacM"
+			id="tachometer-reporter-action--results-JQx4P-VUyiFWEMlMIUU5w9uyy6s"
 			data-run-number="50"
 			data-sort-key="test_bench"
 		>
