--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -2,26 +2,33 @@
 	<h2>📊 Tachometer Benchmark Results</h2>
 	<h3>Summary</h3>
 	<p class="global-status"></p>
-	<ul id="tachometer-reporter-action--summaries">
-		<li data-sort-key="test-results">
-			<div
-				id="tachometer-reporter-action--summary-report-id"
-				data-run-number="50"
+	<div id="tachometer-reporter-action--summaries">
+		<div data-sort-key="000-default">
+			<ul
+				id="tachometer-reporter-action--summaries::vLpvdPi0hOozeUB9NMaWIJ9oUSA"
 			>
-				<span class="status"
-					><a
-						href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
-						title="Currently running in Pull Request Test #50…"
-						aria-label="Currently running in Pull Request Test #50…"
-						>⏱
-					</a></span
-				>test_bench<span
-					>: <strong>unsure 🔍</strong>
-					<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
-				><br /><sup>local-framework vs base-framework</sup>
-			</div>
-		</li>
-	</ul>
+				<li data-sort-key="test-results">
+					<div
+						id="tachometer-reporter-action--summary::vLpvdPi0hOozeUB9NMaWIJ9oUSA::report-id"
+						class="summary::report-id"
+						data-run-number="50"
+					>
+						<span class="status"
+							><a
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
+								title="Currently running in Pull Request Test #50…"
+								aria-label="Currently running in Pull Request Test #50…"
+								>⏱
+							</a></span
+						>test_bench<span
+							>: <strong>unsure 🔍</strong>
+							<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
+						><br /><sup>local-framework vs base-framework</sup>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 	<h3>Results</h3>
 	<p class="global-status"></p>
 	<div id="tachometer-reporter-action--results">
