--- a/tests/fixtures/test-results-summary.html
+++ b/tests/fixtures/test-results-summary.html
@@ -1,6 +1,6 @@
 <div
-	id="tachometer-reporter-action--summary::VRSrXilRuQNwRBqUO-7MnkROuVU::fXZiwODNGd0dkOsS2QmPDRQGacM"
-	class="summary-fXZiwODNGd0dkOsS2QmPDRQGacM"
+	id="tachometer-reporter-action--summary::vLpvdPi0hOozeUB9NMaWIJ9oUSA::JQx4P-VUyiFWEMlMIUU5w9uyy6s"
+	class="summary::JQx4P-VUyiFWEMlMIUU5w9uyy6s"
 	data-run-number="50"
 >
 	<span class="status"></span>test_bench<span
