Consistently use testReportId in tests

--- a/tests/fixtures/new-comment-running.html
+++ b/tests/fixtures/new-comment-running.html
@@ -7,10 +7,10 @@
 			<ul
 				id="tachometer-reporter-action--summaries::vLpvdPi0hOozeUB9NMaWIJ9oUSA"
 			>
-				<li data-sort-key="test-results">
+				<li data-sort-key="report-id">
 					<div
-						id="tachometer-reporter-action--summary::vLpvdPi0hOozeUB9NMaWIJ9oUSA::test-results"
-						class="summary::test-results"
+						id="tachometer-reporter-action--summary::vLpvdPi0hOozeUB9NMaWIJ9oUSA::report-id"
+						class="summary::report-id"
 						data-run-number="50"
 					>
 						<span class="status"
@@ -20,7 +20,7 @@
 								aria-label="Currently running in Pull Request Test #50…"
 								>⏱
 							</a></span
-						>test-results
+						>report-id
 					</div>
 				</li>
 			</ul>
@@ -30,9 +30,9 @@
 	<p class="global-status"></p>
 	<div id="tachometer-reporter-action--results">
 		<div
-			id="tachometer-reporter-action--results-test-results"
+			id="tachometer-reporter-action--results-report-id"
 			data-run-number="50"
-			data-sort-key="test-results"
+			data-sort-key="report-id"
 		>
 			<details
 				><summary
@@ -43,7 +43,7 @@
 							aria-label="Currently running in Pull Request Test #50…"
 							>⏱
 						</a></span
-					><strong>test-results</strong></summary
+					><strong>report-id</strong></summary
 				>
 				<div class="result-entry">
 					<a
