--- a/tests/fixtures/test-results-existing-comment.html
+++ b/tests/fixtures/test-results-existing-comment.html
@@ -7,13 +7,13 @@
 			<ul
 				id="tachometer-reporter-action--summaries::vLpvdPi0hOozeUB9NMaWIJ9oUSA"
 			>
-				<li data-sort-key="test-results">
+				<li data-sort-key="report-id">
 					<div
 						id="tachometer-reporter-action--summary::vLpvdPi0hOozeUB9NMaWIJ9oUSA::report-id"
 						class="summary::report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>test_bench<span
+						<span class="status"></span>report-id<span
 							>: <strong>unsure 🔍</strong>
 							<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
 						><br /><sup>local-framework vs base-framework</sup>
@@ -28,11 +28,11 @@
 		<div
 			id="tachometer-reporter-action--results-report-id"
 			data-run-number="50"
-			data-sort-key="test-results"
+			data-sort-key="report-id"
 		>
 			<details
 				><summary
-					><span class="status"></span><strong>test_bench</strong></summary
+					><span class="status"></span><strong>report-id</strong></summary
 				>
 				<div class="result-entry">
 					<ul>
