--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -7,7 +7,7 @@
 			<ul
 				id="tachometer-reporter-action--summaries::vLpvdPi0hOozeUB9NMaWIJ9oUSA"
 			>
-				<li data-sort-key="test-results">
+				<li data-sort-key="report-id">
 					<div
 						id="tachometer-reporter-action--summary::vLpvdPi0hOozeUB9NMaWIJ9oUSA::report-id"
 						class="summary::report-id"
@@ -20,7 +20,7 @@
 								aria-label="Currently running in Pull Request Test #50…"
 								>⏱
 							</a></span
-						>test_bench<span
+						>report-id<span
 							>: <strong>unsure 🔍</strong>
 							<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
 						><br /><sup>local-framework vs base-framework</sup>
@@ -35,7 +35,7 @@
 		<div
 			id="tachometer-reporter-action--results-report-id"
 			data-run-number="50"
-			data-sort-key="test-results"
+			data-sort-key="report-id"
 		>
 			<details
 				><summary
@@ -46,7 +46,7 @@
 							aria-label="Currently running in Pull Request Test #50…"
 							>⏱
 						</a></span
-					><strong>test_bench</strong></summary
+					><strong>report-id</strong></summary
 				>
 				<div class="result-entry">
 					<ul>
