Add measurementId as a class to results table

--- a/tests/fixtures/multi-measure-new-comment.html
+++ b/tests/fixtures/multi-measure-new-comment.html
@@ -70,7 +70,7 @@
 						</li>
 					</ul>
 					<h4>duration</h4>
-					<table>
+					<table class="results::R-VSUDBIvX9oa7OhG2Td6w-LuY4">
 						<thead>
 							<tr>
 								<th>Version</th>
@@ -121,7 +121,7 @@
 						</tbody>
 					</table>
 					<h4>window.usedJSHeapSize</h4>
-					<table>
+					<table class="results::AmH0KOJP8BUNrat2VaC_V3DY9mI">
 						<thead>
 							<tr>
 								<th>Version</th>
