--- a/tests/fixtures/test-results-body.html
+++ b/tests/fixtures/test-results-body.html
@@ -13,7 +13,7 @@
 			Commit: 626e78c
 		</li>
 	</ul>
-	<table>
+	<table class="results::vLpvdPi0hOozeUB9NMaWIJ9oUSA">
 		<thead>
 			<tr>
 				<th>Version</th>
