--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -63,7 +63,7 @@
 							Commit: 626e78c
 						</li>
 					</ul>
-					<table>
+					<table class="results::vLpvdPi0hOozeUB9NMaWIJ9oUSA">
 						<thead>
 							<tr>
 								<th>Version</th>
