Add multi-measure test suite

--- a/tests/fixtures/multi-measure-results-running.html
+++ b/tests/fixtures/multi-measure-results-running.html
@@ -8,13 +8,20 @@
 			<ul
 				id="tachometer-reporter-action--summaries::R-VSUDBIvX9oa7OhG2Td6w-LuY4"
 			>
-				<li data-sort-key="test_bench">
+				<li data-sort-key="multi-measure-report-id">
 					<div
-						id="tachometer-reporter-action--summary::R-VSUDBIvX9oa7OhG2Td6w-LuY4::4W8itmYrXE9DReBxWDOJZRrxTc4"
-						class="summary::4W8itmYrXE9DReBxWDOJZRrxTc4"
+						id="tachometer-reporter-action--summary::R-VSUDBIvX9oa7OhG2Td6w-LuY4::multi-measure-report-id"
+						class="summary::multi-measure-report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>test_bench<span
+						<span class="status"
+							><a
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
+								title="Currently running in Pull Request Test #50…"
+								aria-label="Currently running in Pull Request Test #50…"
+								>⏱
+							</a></span
+						>multi-measure-report-id<span
 							>: <strong>faster ✔</strong>
 							<em>4% - 8% (6.30ms - 13.34ms)</em></span
 						><br /><sup>local-framework vs base-framework</sup>
@@ -27,13 +34,20 @@
 			<ul
 				id="tachometer-reporter-action--summaries::AmH0KOJP8BUNrat2VaC_V3DY9mI"
 			>
-				<li data-sort-key="test_bench">
+				<li data-sort-key="multi-measure-report-id">
 					<div
-						id="tachometer-reporter-action--summary::AmH0KOJP8BUNrat2VaC_V3DY9mI::4W8itmYrXE9DReBxWDOJZRrxTc4"
-						class="summary::4W8itmYrXE9DReBxWDOJZRrxTc4"
+						id="tachometer-reporter-action--summary::AmH0KOJP8BUNrat2VaC_V3DY9mI::multi-measure-report-id"
+						class="summary::multi-measure-report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>test_bench<span
+						<span class="status"
+							><a
+								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
+								title="Currently running in Pull Request Test #50…"
+								aria-label="Currently running in Pull Request Test #50…"
+								>⏱
+							</a></span
+						>multi-measure-report-id<span
 							>: <strong>slower ❌</strong>
 							<em>91% - 91% (3.25ms - 3.26ms)</em></span
 						><br /><sup>local-framework vs base-framework</sup>
@@ -46,13 +60,20 @@
 	<p class="global-status"></p>
 	<div id="tachometer-reporter-action--results">
 		<div
-			id="tachometer-reporter-action--results-4W8itmYrXE9DReBxWDOJZRrxTc4"
+			id="tachometer-reporter-action--results-multi-measure-report-id"
 			data-run-number="50"
-			data-sort-key="test_bench"
+			data-sort-key="multi-measure-report-id"
 		>
 			<details
 				><summary
-					><span class="status"></span><strong>test_bench</strong></summary
+					><span class="status"
+						><a
+							href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
+							title="Currently running in Pull Request Test #50…"
+							aria-label="Currently running in Pull Request Test #50…"
+							>⏱
+						</a></span
+					><strong>multi-measure-report-id</strong></summary
 				>
 				<div class="result-entry">
 					<ul>
