Replace some unnecessary spans with Fragments

--- a/tests/fixtures/multi-measure-results.html
+++ b/tests/fixtures/multi-measure-results.html
@@ -14,9 +14,8 @@
 						class="summary::multi-measure-report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>multi-measure-report-id<span
-							>: <strong>faster ✔</strong>
-							<em>4% - 8% (6.30ms - 13.34ms)</em></span
+						<span class="status"></span>multi-measure-report-id:
+						<strong>faster ✔</strong> <em>4% - 8% (6.30ms - 13.34ms)</em
 						><br /><sup>local-framework vs base-framework</sup>
 					</div>
 				</li>
@@ -33,9 +32,8 @@
 						class="summary::multi-measure-report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>multi-measure-report-id<span
-							>: <strong>slower ❌</strong>
-							<em>91% - 91% (3.25ms - 3.26ms)</em></span
+						<span class="status"></span>multi-measure-report-id:
+						<strong>slower ❌</strong> <em>91% - 91% (3.25ms - 3.26ms)</em
 						><br /><sup>local-framework vs base-framework</sup>
 					</div>
 				</li>
