--- a/tests/fixtures/multi-measure-multi-results.html
+++ b/tests/fixtures/multi-measure-multi-results.html
@@ -14,9 +14,8 @@
 						class="summary::multi-measure-report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>multi-measure-report-id<span
-							>: <strong>faster ✔</strong>
-							<em>4% - 8% (6.30ms - 13.34ms)</em></span
+						<span class="status"></span>multi-measure-report-id:
+						<strong>faster ✔</strong> <em>4% - 8% (6.30ms - 13.34ms)</em
 						><br /><sup>local-framework vs base-framework</sup>
 					</div>
 				</li>
@@ -26,9 +25,8 @@
 						class="summary::other-multi-measure-report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>other-multi-measure-report-id<span
-							>: <strong>faster ✔</strong>
-							<em>34% - 42% (1.38ms - 1.71ms)</em></span
+						<span class="status"></span>other-multi-measure-report-id:
+						<strong>faster ✔</strong> <em>34% - 42% (1.38ms - 1.71ms)</em
 						><br /><sup>local-framework vs base-framework</sup>
 					</div>
 				</li>
@@ -45,9 +43,8 @@
 						class="summary::multi-measure-report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>multi-measure-report-id<span
-							>: <strong>slower ❌</strong>
-							<em>91% - 91% (3.25ms - 3.26ms)</em></span
+						<span class="status"></span>multi-measure-report-id:
+						<strong>slower ❌</strong> <em>91% - 91% (3.25ms - 3.26ms)</em
 						><br /><sup>local-framework vs base-framework</sup>
 					</div>
 				</li>
@@ -57,9 +54,8 @@
 						class="summary::other-multi-measure-report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>other-multi-measure-report-id<span
-							>: <strong>faster ✔</strong>
-							<em>2% - 2% (0.02ms - 0.02ms)</em></span
+						<span class="status"></span>other-multi-measure-report-id:
+						<strong>faster ✔</strong> <em>2% - 2% (0.02ms - 0.02ms)</em
 						><br /><sup>local-framework vs base-framework</sup>
 					</div>
 				</li>
