--- a/tests/fixtures/multi-measure-results-running.html
+++ b/tests/fixtures/multi-measure-results-running.html
@@ -21,10 +21,10 @@
 								aria-label="Currently running in Pull Request Test #50…"
 								>⏱
 							</a></span
-						>multi-measure-report-id<span
-							>: <strong>faster ✔</strong>
-							<em>4% - 8% (6.30ms - 13.34ms)</em></span
-						><br /><sup>local-framework vs base-framework</sup>
+						>multi-measure-report-id: <strong>faster ✔</strong>
+						<em>4% - 8% (6.30ms - 13.34ms)</em><br /><sup
+							>local-framework vs base-framework</sup
+						>
 					</div>
 				</li>
 			</ul>
@@ -47,10 +47,10 @@
 								aria-label="Currently running in Pull Request Test #50…"
 								>⏱
 							</a></span
-						>multi-measure-report-id<span
-							>: <strong>slower ❌</strong>
-							<em>91% - 91% (3.25ms - 3.26ms)</em></span
-						><br /><sup>local-framework vs base-framework</sup>
+						>multi-measure-report-id: <strong>slower ❌</strong>
+						<em>91% - 91% (3.25ms - 3.26ms)</em><br /><sup
+							>local-framework vs base-framework</sup
+						>
 					</div>
 				</li>
 			</ul>
