--- a/tests/fixtures/multiple-entries.html
+++ b/tests/fixtures/multiple-entries.html
@@ -13,10 +13,10 @@
 						class="summary::report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>report-id<span
-							>: <strong>unsure 🔍</strong>
-							<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
-						><br /><sup>local-framework vs base-framework</sup>
+						<span class="status"></span>report-id: <strong>unsure 🔍</strong>
+						<em>-10% - +12% (-4.10ms - +5.24ms)</em><br /><sup
+							>local-framework vs base-framework</sup
+						>
 					</div>
 				</li>
 				<li data-sort-key="test-results-new-id">
@@ -25,9 +25,8 @@
 						class="summary::test-results-new-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>test-results-new-id<span
-							>: <strong>unsure 🔍</strong>
-							<em>-21% - +2% (-10.34ms - +1.15ms)</em></span
+						<span class="status"></span>test-results-new-id:
+						<strong>unsure 🔍</strong> <em>-21% - +2% (-10.34ms - +1.15ms)</em
 						><br /><sup>local-framework vs base-framework</sup>
 					</div>
 				</li>
