--- a/tests/fixtures/test-results-2-updated-comment.html
+++ b/tests/fixtures/test-results-2-updated-comment.html
@@ -13,10 +13,10 @@
 						class="summary::JQx4P-VUyiFWEMlMIUU5w9uyy6s"
 						data-run-number="50"
 					>
-						<span class="status"></span>test_bench<span
-							>: <strong>unsure 🔍</strong>
-							<em>-11% - +13% (-5.10ms - +6.24ms)</em></span
-						><br /><sup>local-framework vs base-framework</sup>
+						<span class="status"></span>test_bench: <strong>unsure 🔍</strong>
+						<em>-11% - +13% (-5.10ms - +6.24ms)</em><br /><sup
+							>local-framework vs base-framework</sup
+						>
 					</div>
 				</li>
 			</ul>
