--- a/tests/fixtures/test-results-existing-comment.html
+++ b/tests/fixtures/test-results-existing-comment.html
@@ -13,10 +13,10 @@
 						class="summary::report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>report-id<span
-							>: <strong>unsure 🔍</strong>
-							<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
-						><br /><sup>local-framework vs base-framework</sup>
+						<span class="status"></span>report-id: <strong>unsure 🔍</strong>
+						<em>-10% - +12% (-4.10ms - +5.24ms)</em><br /><sup
+							>local-framework vs base-framework</sup
+						>
 					</div>
 				</li>
 			</ul>
