--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -20,10 +20,10 @@
 								aria-label="Currently running in Pull Request Test #50…"
 								>⏱
 							</a></span
-						>report-id<span
-							>: <strong>unsure 🔍</strong>
-							<em>-10% - +12% (-4.10ms - +5.24ms)</em></span
-						><br /><sup>local-framework vs base-framework</sup>
+						>report-id: <strong>unsure 🔍</strong>
+						<em>-10% - +12% (-4.10ms - +5.24ms)</em><br /><sup
+							>local-framework vs base-framework</sup
+						>
 					</div>
 				</li>
 			</ul>
