--- a/tests/fixtures/test-results-summary.html
+++ b/tests/fixtures/test-results-summary.html
@@ -3,7 +3,8 @@
 	class="summary::JQx4P-VUyiFWEMlMIUU5w9uyy6s"
 	data-run-number="50"
 >
-	<span class="status"></span>test_bench<span
-		>: <strong>unsure 🔍</strong> <em>-10% - +12% (-4.10ms - +5.24ms)</em></span
-	><br /><sup>local-framework vs base-framework</sup>
+	<span class="status"></span>test_bench: <strong>unsure 🔍</strong>
+	<em>-10% - +12% (-4.10ms - +5.24ms)</em><br /><sup
+		>local-framework vs base-framework</sup
+	>
 </div>
