Try out new icons (❔, ⏳)

--- a/tests/fixtures/multiple-entries.html
+++ b/tests/fixtures/multiple-entries.html
@@ -13,7 +13,7 @@
 						class="summary::report-id"
 						data-run-number="50"
 					>
-						<span class="status"></span>report-id: <strong>unsure 🔍</strong>
+						<span class="status"></span>report-id: <strong>unsure ❔</strong>
 						<em>-10% - +12% (-4.10ms - +5.24ms)</em><br /><sup
 							>local-framework vs base-framework</sup
 						>
@@ -26,7 +26,7 @@
 						data-run-number="50"
 					>
 						<span class="status"></span>test-results-new-id:
-						<strong>unsure 🔍</strong> <em>-21% - +2% (-10.34ms - +1.15ms)</em
+						<strong>unsure ❔</strong> <em>-21% - +2% (-10.34ms - +1.15ms)</em
 						><br /><sup>local-framework vs base-framework</sup>
 					</div>
 				</li>
@@ -90,7 +90,7 @@
 								</td>
 								<td align="center">-</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-12% - +9%<br />-5.24ms -
+									<strong>unsure ❔</strong><br />-12% - +9%<br />-5.24ms -
 									+4.10ms
 								</td>
 							</tr>
@@ -101,7 +101,7 @@
 									<strong>slower ❌</strong><br />9% - 38%<br />3.55ms - 12.77ms
 								</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-10% - +12%<br />-4.10ms -
+									<strong>unsure ❔</strong><br />-10% - +12%<br />-4.10ms -
 									+5.24ms
 								</td>
 								<td align="center">-</td>
@@ -157,11 +157,11 @@
 									18.26ms
 								</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-1% - +26%<br />-0.40ms -
+									<strong>unsure ❔</strong><br />-1% - +26%<br />-0.40ms -
 									+10.72ms
 								</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-3% - +24%<br />-1.15ms -
+									<strong>unsure ❔</strong><br />-3% - +24%<br />-1.15ms -
 									+10.34ms
 								</td>
 							</tr>
@@ -173,11 +173,11 @@
 								</td>
 								<td align="center">-</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-22% - -0%<br />-10.72ms -
+									<strong>unsure ❔</strong><br />-22% - -0%<br />-10.72ms -
 									+0.40ms
 								</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-12% - +9%<br />-5.24ms -
+									<strong>unsure ❔</strong><br />-12% - +9%<br />-5.24ms -
 									+4.10ms
 								</td>
 							</tr>
@@ -188,12 +188,12 @@
 									<strong>slower ❌</strong><br />9% - 38%<br />3.55ms - 12.77ms
 								</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-21% - +2%<br />-10.34ms -
+									<strong>unsure ❔</strong><br />-21% - +2%<br />-10.34ms -
 									+1.15ms
 								</td>
 								<td align="center">-</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-10% - +12%<br />-4.10ms -
+									<strong>unsure ❔</strong><br />-10% - +12%<br />-4.10ms -
 									+5.24ms
 								</td>
 							</tr>
