--- a/tests/fixtures/test-results-2-updated-comment.html
+++ b/tests/fixtures/test-results-2-updated-comment.html
@@ -13,7 +13,7 @@
 						class="summary::JQx4P-VUyiFWEMlMIUU5w9uyy6s"
 						data-run-number="50"
 					>
-						<span class="status"></span>test_bench: <strong>unsure 🔍</strong>
+						<span class="status"></span>test_bench: <strong>unsure ❔</strong>
 						<em>-11% - +13% (-5.10ms - +6.24ms)</em><br /><sup
 							>local-framework vs base-framework</sup
 						>
@@ -79,7 +79,7 @@
 								</td>
 								<td align="center">-</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-13% - +10%<br />-6.24ms -
+									<strong>unsure ❔</strong><br />-13% - +10%<br />-6.24ms -
 									+5.10ms
 								</td>
 							</tr>
@@ -91,7 +91,7 @@
 									13.77ms
 								</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-11% - +13%<br />-5.10ms -
+									<strong>unsure ❔</strong><br />-11% - +13%<br />-5.10ms -
 									+6.24ms
 								</td>
 								<td align="center">-</td>
