--- a/tests/fixtures/test-results-body.html
+++ b/tests/fixtures/test-results-body.html
@@ -43,7 +43,7 @@
 				</td>
 				<td align="center">-</td>
 				<td align="center">
-					<strong>unsure 🔍</strong><br />-12% - +9%<br />-5.24ms - +4.10ms
+					<strong>unsure ❔</strong><br />-12% - +9%<br />-5.24ms - +4.10ms
 				</td>
 			</tr>
 			<tr>
@@ -53,7 +53,7 @@
 					<strong>slower ❌</strong><br />9% - 38%<br />3.55ms - 12.77ms
 				</td>
 				<td align="center">
-					<strong>unsure 🔍</strong><br />-10% - +12%<br />-4.10ms - +5.24ms
+					<strong>unsure ❔</strong><br />-10% - +12%<br />-4.10ms - +5.24ms
 				</td>
 				<td align="center">-</td>
 			</tr>
