--- a/tests/fixtures/test-results-existing-running.html
+++ b/tests/fixtures/test-results-existing-running.html
@@ -18,9 +18,9 @@
 								href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 								title="Currently running in Pull Request Test #50…"
 								aria-label="Currently running in Pull Request Test #50…"
-								>⏱
+								>⏳
 							</a></span
-						>report-id: <strong>unsure 🔍</strong>
+						>report-id: <strong>unsure ❔</strong>
 						<em>-10% - +12% (-4.10ms - +5.24ms)</em><br /><sup
 							>local-framework vs base-framework</sup
 						>
@@ -44,7 +44,7 @@
 							href="https://github.com/andrewiggins/tachometer-reporter-action/runs/862215228"
 							title="Currently running in Pull Request Test #50…"
 							aria-label="Currently running in Pull Request Test #50…"
-							>⏱
+							>⏳
 						</a></span
 					><strong>report-id</strong></summary
 				>
@@ -93,7 +93,7 @@
 								</td>
 								<td align="center">-</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-12% - +9%<br />-5.24ms -
+									<strong>unsure ❔</strong><br />-12% - +9%<br />-5.24ms -
 									+4.10ms
 								</td>
 							</tr>
@@ -104,7 +104,7 @@
 									<strong>slower ❌</strong><br />9% - 38%<br />3.55ms - 12.77ms
 								</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-10% - +12%<br />-4.10ms -
+									<strong>unsure ❔</strong><br />-10% - +12%<br />-4.10ms -
 									+5.24ms
 								</td>
 								<td align="center">-</td>
