--- a/tests/fixtures/test-results-new-comment.html
+++ b/tests/fixtures/test-results-new-comment.html
@@ -13,7 +13,7 @@
 						class="summary::JQx4P-VUyiFWEMlMIUU5w9uyy6s"
 						data-run-number="50"
 					>
-						<span class="status"></span>test_bench: <strong>unsure 🔍</strong>
+						<span class="status"></span>test_bench: <strong>unsure ❔</strong>
 						<em>-10% - +12% (-4.10ms - +5.24ms)</em><br /><sup
 							>local-framework vs base-framework</sup
 						>
@@ -79,7 +79,7 @@
 								</td>
 								<td align="center">-</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-12% - +9%<br />-5.24ms -
+									<strong>unsure ❔</strong><br />-12% - +9%<br />-5.24ms -
 									+4.10ms
 								</td>
 							</tr>
@@ -90,7 +90,7 @@
 									<strong>slower ❌</strong><br />9% - 38%<br />3.55ms - 12.77ms
 								</td>
 								<td align="center">
-									<strong>unsure 🔍</strong><br />-10% - +12%<br />-4.10ms -
+									<strong>unsure ❔</strong><br />-10% - +12%<br />-4.10ms -
 									+5.24ms
 								</td>
 								<td align="center">-</td>
